--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.2",
     "add": "^2.0.6",
     "avatar": "^0.1.0",
@@ -31,6 +32,7 @@
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "js-cookie": "^3.0.5",
+    "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.487.0",
     "mongoose": "^8.13.2",
     "next": "15.2.4",
