--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-themes": "^0.4.6",
     "node-cron": "^3.0.3",
     "npx": "^10.2.2",
+    "nuqs": "^2.4.1",
     "open": "^10.1.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
