--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-table": "^8.21.2",
     "add": "^2.0.6",
     "avatar": "^0.1.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -47,6 +48,7 @@
     "recharts": "^2.15.2",
     "shadcn": "^2.4.0",
     "sonner": "^2.0.3",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
